// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line using SVG should render correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot line"
      clip-path="url(#clip-path-test)"
    >
      <path
        class="line"
        d="M0,100L20,75L40,50L60,100                                                "
        style="fill: none; pointer-events: none; stroke: rgb(153, 193, 220); stroke-width: 2px;"
      />
      <path
        class="line"
        d="M0,100L100,100"
        style="fill: none; pointer-events: none;"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Line using SVG should skip rendering if there is no x scale avaliable 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot line"
      clip-path="url(#clip-path-test)"
    />
  </svg>
</DocumentFragment>
`;

exports[`Line using SVG should skip rendering if there is no y scale avaliable 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot line"
      clip-path="url(#clip-path-test)"
    />
  </svg>
</DocumentFragment>
`;
